--- a/AutoParking/pom.xml
+++ b/AutoParking/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.sample.common</groupId>
-	<artifactId>SpringMVC</artifactId>
+	<groupId>com.autoparking.common</groupId>
+	<artifactId>AutoParking</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>SpringMVC Maven Webapp</name>
+	<name>Auto Parking Webapp</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
